...
    <string name="h_rd_description">If you enjoy using TIBCO® JasperMobile™, please take a moment to rate it. It won\'t take more than a minute. Thanks for your support!</string>
    <string name="h_rd_rate">Rate</string>
    <string name="h_rd_never">No, thanks</string>
    <string name="h_rd_later">Remind me later</string>

    <!-- Delete Dialog -->
    <string name="spm_delete_btn">Delete</string>

    <!-- Server Profile Activity -->
    <string name="sp_save_btn">Save</string>

    <!-- Error messages -->
    <string name="sp_error_field_required">This field is required.</string>
...
    <!--TODO Remove!-->
    <string name="fv_undefined_message">Can not open. Resource type undefined</string>
    <!--TODO Remove!-->
    <string name="fv_opening_message">Opening file...</string>

    <!-- Filter Dialog -->
    <string name="s_fd_option_all">All</string>
    <string name="s_fd_option_reports">Reports</string>
    <string name="s_fd_option_saved_values">Saved values</string>
    <string name="s_fd_option_dashboards">Dashboards</string>
    <string name="s_fd_option_files">Files</string>
    <!--TODO Remove!-->
    <string name="s_fd_option_others">Others</string>
    <string name="s_fd_sort_label">Label</string>
    <string name="s_fd_sort_date">Creation date</string>

    <!-- Filter Favorites Dialog -->
    <string name="f_fd_option_folders">Folders</string>

    <!-- Settings Activity -->
    <string name="sa_show_about">About</string>
...
    <string name="sch_owner">Owner</string>
    <string name="sch_state">State</string>
    <string name="sch_lass_run">Last run</string>
    <string name="sch_next_run">Next run</string>

    <!-- Report Viewer Activity -->
    <string name="rv_ab_save_report">Save Report</string>
    <string name="rv_ab_show_filters">Show Filters</string>
    <string name="rv_error_empty_report">There is no report data.</string>
    <string name="rv_error_empty_report_title">The report is empty.</string>
    <string name="rv_select_page">Select page</string>
    <string name="rv_out_of_range">The requested page is out of range.</string>
    <string name="rv_dialog_reload">Reload</string>
...

    <!-- Toasts -->
    <string name="sr_t_report_saved">Report saved to file successfully.</string>
    <!-- Error messages -->
    <string name="sr_error_field_is_empty">This field is required.</string>
    <string name="sr_error_characters_not_allowed">The following characters are not allowed: * \\ / \" \' : ? | &lt; > + [ ]</string>
    <string name="sr_error_report_exists">A file with this name already exists.</string>

    <!-- Favorites activity -->
    <string name="f_title">Favorites</string>
    <string name="f_empty_list_msg">No favorite items</string>

    <!-- Saved Files Activity -->
...
    <string name="failed_load_data">Failed to load data!</string>
    <string name="authenticator_label">Jasper accounts</string>
    <string name="wrong_action">Can not perform this action</string>
    <string name="no_network">There was a network error.</string>
    <string name="request_was_cancelled_explicitly">Cancelled</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="voice_command_btn">Voice command</string>
    <string name="voice_command_title">Say some command</string>
    <string name="voice_command_undefined">Can not recognize command</string>
    <string name="voice_command_help">You can use voice commands to interact with resources. Two commands are supported: "run" and "find". For instance, you can say "run" with resource name to start report execution.</string>
    <string name="voice_command_not_show_again">Don\'t show again</string>

...
