...
    <string name="app_label" translatable="false">TIBCO JasperMobile</string>
    <string name="app_cast_id" translatable="false">225DAEF5</string>
    <string name="resource_cast_cancel_intent" translatable="false">com.jaspersoft.android.jaspermobile.RESOURCE_CAST_CANCEL</string>
    <string name="resource_presentation_stop_intent" translatable="false">com.jaspersoft.android.jaspermobile.RESOURCE_PRESENTATION_STOP</string>

    <!-- Untranslatable values -->
    <string name="si_fd_option_html" translatable="false">HTML</string>
    <string name="si_fd_option_png" translatable="false">PNG</string>
    <string name="si_fd_option_pdf" translatable="false">PDF</string>
    <string name="si_fd_option_xls" translatable="false">XLS</string>
    <string name="empty_text_place_holder" translatable="false">---</string>
    <string name="file_format_xls" translatable="false">Excel</string>

    <!-- Screen names for analytic -->
    <string name="ja_ics" translatable="false">Input controls screen</string>
    <string name="ja_ss_ic_s" translatable="false">Single select IC screen</string>
...
